fix <input> positioning so Chrome won't jump up

--- a/assets/sass/minnpost-membership-front-end.scss
+++ b/assets/sass/minnpost-membership-front-end.scss
@@ -161,6 +161,7 @@ $nav-wrap-screen: 960px;
 			}
 		}
 		.m-form-item {
+			position: relative;
 			text-align: center;
 		}
 		input[type="radio"], input[type="checkbox"] {
